Regression: Geometry nodes: Object info does not care if referenced obejcts subdivision surface modifier is disabled #99058

Closed
opened 2022-06-21 16:31:21 +02:00 by D0ppelgaenger · 14 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: a18c291435
Worked: 3.2.0

Caused by ca9d65cc97

Short description of error
As in Title
I might be misunderstanding things, but it seems to be the inverse of https://developer.blender.org/T96264
However, this doesn't seem to be linked to GPU subdivision, since it is also the case if GPU subdivision is disabled, and/or the subdiv is not the last modifier int eh stack (which should also disable it)
Obejct info.mp4

Exact steps for others to reproduce the error
Ensure GPU subdivision is disabled
Add two objects
Add a subdivision surface modifier to one of the objects and disable it
Add a geometry nodes modifier to the other object
Add an object info node to the GN tree and reference to other obejct
Plug the geometry output of the obejct info into the node tree output
Enable/disable subdiv modifier - It should work correctly
Enable GPU subdivision
Enable/disable subdiv modifier - The object created via GN does not care if the original object's modifier is disabled and will always reference it with it enabled

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: `a18c291435` Worked: 3.2.0 Caused by ca9d65cc97 **Short description of error** As in Title I might be misunderstanding things, but it seems to be the inverse of https://developer.blender.org/T96264 However, this doesn't seem to be linked to GPU subdivision, since it is also the case if GPU subdivision is disabled, and/or the subdiv is not the last modifier int eh stack (which should also disable it) [Obejct info.mp4](https://archive.blender.org/developer/F13212492/Obejct_info.mp4) **Exact steps for others to reproduce the error** Ensure GPU subdivision is disabled Add two objects Add a subdivision surface modifier to one of the objects and disable it Add a geometry nodes modifier to the other object Add an object info node to the GN tree and reference to other obejct Plug the geometry output of the obejct info into the node tree output Enable/disable subdiv modifier - It should work correctly Enable GPU subdivision Enable/disable subdiv modifier - The object created via GN does not care if the original object's modifier is disabled and will always reference it with it enabled
Author

Added subscriber: @Leo-Luther

Added subscriber: @Leo-Luther

Added subscribers: @kevindietrich, @iss

Added subscribers: @kevindietrich, @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This actually is working correctly here until the moment GPU subdivision is enabled. Then it does not work even if it is disabled.

CC @kevindietrich

This actually is working correctly here until the moment GPU subdivision is enabled. Then it does not work even if it is disabled. CC @kevindietrich
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm also running into this issue right now. Looks like the issue is that me->runtime.mesh_eval and me->runtime.wrapper_type are set in mesh_wrapper_ensure_subdivision, but are never unset when the modifier is disabled or the subdivision level is set to zero.

File to reproduce the issue:
subdivision_update_bug.blend

Just disable the Subdivision modifier and see that the other object does not change.
It does work when reloading the file with the modifier being disabled.

I'm also running into this issue right now. Looks like the issue is that `me->runtime.mesh_eval` and `me->runtime.wrapper_type` are set in `mesh_wrapper_ensure_subdivision`, but are never unset when the modifier is disabled or the subdivision level is set to zero. File to reproduce the issue: [subdivision_update_bug.blend](https://archive.blender.org/developer/F13220456/subdivision_update_bug.blend) Just disable the Subdivision modifier and see that the other object does not change. It does work when reloading the file with the modifier being disabled.

A subdivision level of 0 will effectively disable the modifier. I guess a fix could be to unset/delete the runtime subdivision data before executing the modifier stack, if no subsurf modifier is enabled.

A subdivision level of 0 will effectively disable the modifier. I guess a fix could be to unset/delete the runtime subdivision data before executing the modifier stack, if no subsurf modifier is enabled.
Member

Yes that sounds reasonable. Can you look into that?

Yes that sounds reasonable. Can you look into that?

I can look into it, yes.

I can look into it, yes.
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Member

Caused by ca9d65cc97

CC @brecht

Caused by ca9d65cc97 CC @brecht
Philipp Oeser changed title from Geometry nodes: Object info does not care if referenced obejcts subdivision surface modifier is disabled to Regression: Geometry nodes: Object info does not care if referenced obejcts subdivision surface modifier is disabled 2022-06-24 18:53:56 +02:00

This issue was referenced by 0357dbf148

This issue was referenced by 0357dbf148dcbfcf6c35a5e9e34cdfa272dc7a98

This issue was referenced by 35da733e6b

This issue was referenced by 35da733e6b87d96a1cf319b7b5328e6031d6931f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-06-24 20:01:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99058
No description provided.