Fix T99058: geometry nodes ignore if subdivision surface modifier is disabled

It was looking up the last modifier in the stack, ignoring visibility, instead
of mesh->runtime.subsurf_runtime_data set by the modifier evaluation and used by
the drawing code.